--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@ img {
 button {
   cursor: pointer;
 }
+
+.loader {
+  margin: 40px auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
